# github-workflows

./: .license_header_template  .licenseignore  CODEOWNERS  README.md
.github/: CODEOWNERS
.github/actions/broken-symlinks-check/: action.yml
.github/actions/check-unacceptable-language/: action.yml
.github/actions/docs-check/: action.yml
.github/actions/format-check/: action.yml  check-swift-format.sh
.github/actions/license-header-check/: action.yml
.github/actions/python-lint-check/: action.yml
.github/actions/yamllint-check/: action.yml
.github/workflows/: android_sdk.yml  check_pr_dependency.yml  cmake_build.yml  cmake_tests.yml  comment_on_first_contribution.yml  create_automerge_pr.yml  github_actions_dependencies.yml  performance_test.yml  ping_stale_prs.yml  proposal_validation.yml  pull_request.yml  pull_request_dependency_check.yml  soundness.yml  swift_package_test.yml  test-sdks.yml
.github/workflows/configs/: .flake8  yamllint.yml
.github/workflows/scripts/: check-broken-symlinks.sh  check-docs.sh  check-license-header.sh  check-local-swift-dependencies.sh  check-swift-format.sh  check-unacceptable-language.sh  cmake-build.sh  cmake-update-cmake-lists.sh  compare-performance-measurements.swift  (+4 more)
docs/: pr-dependency-workflow.md  soundness-docs-check.md
tests/: check-license-header.sh  no-license.java  no-license.yml  test.ps1  test.py
tests/TestPackage/: .spi.yml  CMakeLists.txt  Package.swift  Package@swift-5.10.swift  Package@swift-5.9.swift  Package@swift-6.0.swift
tests/TestPackage/Sources/Target1/: CMakeLists.txt  Target1.swift
(+23 files in other folders)
